crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.invalid-hoisting-setstate/error.txt
Found 1 error:

Error: Cannot access variable before it is declared

`setState` is accessed before it is declared, which prevents the earlier access from updating when this value changes over time.

error.invalid-hoisting-setstate.ts:19:18
  17 |    * $2 = Function context=setState
  18 |    */
> 19 |   useEffect(() => setState(2), []);
     |                   ^^^^^^^^ `setState` accessed before it is declared
  20 |
  21 |   const [state, setState] = useState(0);
  22 |   return <Stringify state={state} />;

error.invalid-hoisting-setstate.ts:21:16
  19 |   useEffect(() => setState(2), []);
  20 |
> 21 |   const [state, setState] = useState(0);
     |                 ^^^^^^^^ `setState` is declared here
  22 |   return <Stringify state={state} />;
  23 | }
  24 |
